Formly Primeng - Angular 20 Init

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,11 @@
   "compileOnSave": false,
   "compilerOptions": {
     "strict": true,
+    "paths": {
+      "formly-primeng": [
+        "./dist/formly-primeng"
+      ]
+    },
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
@@ -29,6 +34,12 @@
     },
     {
       "path": "./tsconfig.spec.json"
+    },
+    {
+      "path": "./projects/formly-primeng/tsconfig.lib.json"
+    },
+    {
+      "path": "./projects/formly-primeng/tsconfig.spec.json"
     }
   ]
 }
