--- a/angular.json
+++ b/angular.json
@@ -86,6 +86,32 @@
           }
         }
       }
+    },
+    "formly-primeng": {
+      "projectType": "library",
+      "root": "projects/formly-primeng",
+      "sourceRoot": "projects/formly-primeng/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular/build:ng-packagr",
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/formly-primeng/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/formly-primeng/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular/build:karma",
+          "options": {
+            "tsConfig": "projects/formly-primeng/tsconfig.spec.json"
+          }
+        }
+      }
     }
   }
 }
