--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ngx-formly/core": "^7.0.0",
     "@primeuix/themes": "^1.2.3",
     "primeng": "^20.0.1",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
